# clearvoice-studio-mlx

./: .gitignore  README.md
ClearerVoice-Studio/clearvoice/: pyproject.toml
ClearerVoice-Studio/clearvoice/clearvoice/: network_wrapper.py  networks.py
ClearerVoice-Studio/clearvoice/clearvoice/config/inference/: MossFormer2_SS_16K.yaml
ClearerVoice-Studio/clearvoice/clearvoice/mlx/: __init__.py  checkpoint.py  decode.py  layers.py  registry.py
ClearerVoice-Studio/clearvoice/clearvoice/mlx/models/: __init__.py  mossformer2_se.py  mossformer2_ss.py
ClearerVoice-Studio/clearvoice/clearvoice/utils/: decode.py
ClearerVoice-Studio/clearvoice/scripts/: convert_checkpoint_to_mlx.py  smoke_mlx_mossformer2_ss.py
clearvoice-cli/: README.md  pyproject.toml
clearvoice-cli/src/clearvoice_cli/: __init__.py  cli.py  spectrograms.py
clearvoice-cli/tests/: test_cli.py
